--- a/2024/common/aoc-common.cabal
+++ b/2024/common/aoc-common.cabal
@@ -11,7 +11,7 @@ cabal-version:      3.0
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:               day03
+name:               aoc-common
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
@@ -23,7 +23,7 @@ name:               day03
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
-synopsis:           advent of code 2024 day 3
+synopsis:           common functions used in AoC solutions
 
 -- A longer description of the package.
 -- description:
@@ -54,13 +54,12 @@ build-type:         Simple
 common warnings
     ghc-options: -Wall
 
--- The name of the package
-executable day03
+library
     -- Import common warning flags.
     import:           warnings
 
-    -- .hs or .lhs file containing the Main module.
-    main-is:          Main.hs
+    exposed-modules:
+        AoC.Common
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
@@ -70,17 +69,11 @@ executable day03
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base ^>=4.18,
-        regex-applicative ^>=0.3,
-        aoc-common
+        base ^>=4.18
 
     -- Directories containing source files.
-    hs-source-dirs:   app
+    hs-source-dirs:   src
 
     -- Base language which the package is written in.
     default-language: Haskell2010
 
-    ghc-options:
-        -O2
-        -fprof-auto
-        -prof
